K8S/basicauth.yaml
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: app-auth
  namespace: app
spec:
  basicAuth:
    secret: authsecret
