K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-apm-app
  namespace: app
  labels:
    app: flask-apm-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-apm-app
  template:
    metadata:
      labels:
        app: flask-apm-app
    spec:
      imagePullSecrets:
      - name: jfrogcred    
      containers:
      - name: flask-apm-app
        image: registry.okcs.com/containers-okcs/flask-apm-app:v1.27
        ports:
        - containerPort: 5000
