K8S/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-apm-service
  namespace: app
spec:
  selector:
    app: flask-apm-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP  # Change to LoadBalancer if needed
