K8S/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flask-route
  namespace: app
spec:
  parentRefs:
    - name: flask-gateway
      sectionName: http
      kind: Gateway
  hostnames:
    - kuber.brizo.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flaskapp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: flask-apm-service
          namespace: app
          port: 80
